readabilit and dark mode fixes

--- a/styles/Post.module.css
+++ b/styles/Post.module.css
@@ -84,7 +84,7 @@
 @media screen and (min-width: 640px) {
     .postGrid {
         display: grid;
-        grid-template-columns: 0.15fr 1fr 0.15fr;
+        grid-template-columns: 1fr 75ch 1fr;
         width: 100%;
     }
     
